--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -381,7 +381,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -397,7 +397,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -415,7 +415,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -431,7 +431,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -447,7 +447,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -465,7 +465,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 text-center mb-5">
@@ -478,7 +478,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 text-center mb-5">
@@ -491,7 +491,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать призентацию</button>
+								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 
@@ -792,7 +792,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-2 mb-5 mb-lg-0">
+					<div class="col-md-2 mb-5 mb-lg-0 d-none d-md-block">
 						<div class="manager text-center">
 							<div class="manager__photo"><img src="images/nosov.jpg" alt="nosov"></div>
 							<div class="manager__name">Владимир ГАРАЗ</div>
@@ -861,7 +861,7 @@
 				</div>
 
 
-				<div class="row align-items-center">
+				<div class="row align-items-center m-0">
 					<div class="col-md-3 p-0">
 						<div class="image_hovef">
 							<img src="images/x1.jpg" alt="x1">
@@ -1018,6 +1018,8 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/slick.min.js"></script>
 		<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+		<script type="text/javascript" src="js/embedplayer.js"></script>
+		<script type="text/javascript" src="js/html5.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
