--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/materialdesignicons.min.css">
 		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href="css/mediaelementplayer.css">
 		<link rel="stylesheet" href="css/slick.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/media.css">
@@ -41,7 +42,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-3 col-sm-6 d-none d-sm-block p-0">
 						<div class="header-button">
-							<a href="#" class="btn btn-orange">Заказать звонок</a>
+							<a href="#zvonok" data-toggle="modal" data-target="#zvonok" class="btn btn-orange">Заказать звонок</a>
 						</div>
 					</div>
 				</div>
@@ -365,7 +366,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue"  data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -381,7 +382,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue " data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -397,7 +398,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -415,7 +416,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -431,7 +432,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -447,7 +448,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 								<div class="text-center d-none d-lg-block pt-4">
 									<div class="orange_min_box orange_min_box--bigwdth"></div>
 								</div>
@@ -465,7 +466,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 text-center mb-5">
@@ -478,7 +479,7 @@
 								<div class="project_house__image">
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 text-center mb-5">
@@ -488,10 +489,10 @@
 									Кухонно-гостиная зона - 35м<sup><small>2</small></sup>
 									Спален - 1. Санузлов-2.
 								</p>
-								<div class="project_house__image">
+								<div class="project_house__image" >
 									<a class="mgn_img" href="images/d1.jpg"><img src="images/d1.jpg" alt="dom"></a>
 								</div>
-								<button class="btn btn-outline-blue"><span class="mdi mdi-download"></span> Скачать презентацию</button>
+								<button class="btn btn-outline-blue" data-toggle="modal" data-target="#prezent"><span class="mdi mdi-download"></span> Скачать презентацию</button>
 							</div>
 						</div>
 
@@ -564,8 +565,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">01/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">Состав<br>проекта</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center text-right p-0"><span class="big_orange-txt">01/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">Состав<br>проекта</span></div>
 									</div>
 								</div>
 							</div>
@@ -591,8 +592,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">02/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">КАЧЕСТВО<br>ПРОЕКТА</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center text-right p-0"><span class="big_orange-txt">02/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">КАЧЕСТВО<br>ПРОЕКТА</span></div>
 									</div>
 								</div>
 							</div>
@@ -618,8 +619,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">03/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">СПЕЦИФИКАЦИЯ<br>МАТЕРИАЛОВ</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">03/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">СПЕЦИФИКАЦИЯ<br>МАТЕРИАЛОВ</span></div>
 									</div>
 								</div>
 							</div>
@@ -645,8 +646,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">04/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">ВЕДОМОСТЬ<br>РАБОТ</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">04/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">ВЕДОМОСТЬ<br>РАБОТ</span></div>
 									</div>
 								</div>
 							</div>
@@ -672,8 +673,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">05/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">ЭКОНОМИЧНОСТЬ <br>ПРИ СТРОИТЕЛЬСТВЕ</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">05/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">ЭКОНОМИЧНОСТЬ <br>ПРИ СТРОИТЕЛЬСТВЕ</span></div>
 									</div>
 								</div>
 							</div>
@@ -699,8 +700,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">06/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">ЦЕНА</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">06/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">ЦЕНА</span></div>
 									</div>
 								</div>
 							</div>
@@ -726,8 +727,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">07/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">ЭКОЛОГИЧНОСТЬ</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">07/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">ЭКОЛОГИЧНОСТЬ</span></div>
 									</div>
 								</div>
 							</div>
@@ -753,8 +754,8 @@
 							<div class="d-flex h-100 justify-content-center">
 								<div class="align-self-center w-100">
 									<div class="row align-items-center">
-										<div class="col-4 text-right p-0"><span class="big_orange-txt">08/</span></div>
-										<div class="col-8 text-left p-0"><span class="norm_text-txt">СРОКИ</span></div>
+										<div class="col-lg-4 col-md-12 col-4 text-lg-right text-md-center  text-right p-0"><span class="big_orange-txt">08/</span></div>
+										<div class="col-lg-8 col-md-12 col-8 text-lg-left text-md-center  text-left p-0"><span class="norm_text-txt">СРОКИ</span></div>
 									</div>
 								</div>
 							</div>
@@ -935,21 +936,51 @@
 					ДОПОЛНИТЕЛЬНЫЕ ДОКАЗАТЕЛЬСТВА<br>НАШЕЙ ЭКСПЕРТНОСТИ
 				</div>
 
-				<div class="row">
-					<div class="col-md-6">
+				<div class="row player2-container justify-content-between">
+					<div class="col-md-6 px-4">
 						<div class="img_audio  text-center">
 							<img src="images/after.jpg" alt="d1">
 						</div>
 						<div class="img_audio  text-center">
 							<img src="images/after.jpg" alt="d1">
 						</div>
+
+
+
+
+						<div class="before_aud_text">Получил идеальный проект идеального дома</div>
+						<div class="media-wrapper">
+							<audio   preload="none" controls style="max-width:100%;">
+								<source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+							</audio>
+						</div>
+						<div class="before_aud_text">Получил идеальный проект идеального дома</div>
+						<div class="media-wrapper">
+							<audio   preload="none" controls style="max-width:100%;">
+								<source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+							</audio>
+						</div>
+
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 px-4">
 						<div class="img_audio text-center">
 							<img src="images/after.jpg" alt="d1">
 						</div>
 						<div class="img_audio text-center">
 							<img src="images/after.jpg" alt="d1">
+						</div>
+
+						<div class="before_aud_text">Получил идеальный проект идеального дома</div>
+						<div class="media-wrapper">
+							<audio   preload="none" controls style="max-width:100%;">
+								<source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+							</audio>
+						</div>
+						<div class="before_aud_text">Получил идеальный проект идеального дома</div>
+						<div class="media-wrapper">
+							<audio   preload="none" controls style="max-width:100%;">
+								<source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
+							</audio>
 						</div>
 					</div>
 				</div>
@@ -1014,12 +1045,84 @@
 			</div>
 		</section>
 
+
+
+
+
+		<div class="modal fade" id="zvonok" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-min-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal_form white-form">
+						<div class="text-right modal_cls"><button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button> </div>
+						<div class="title_form">
+							Заказать <b>Звонок</b>
+						</div>
+						<form action="">
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваше имя">
+								<p class="help-block"></p>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваш Email">
+								<p class="help-block"></p>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваш телефон">
+								<p class="help-block"></p>
+							</div>
+							<button class="btn btn-orange w-100">Отправить</button>
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+
+		<div class="modal fade" id="prezent" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-min-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal_form white-form">
+						<div class="text-right modal_cls"><button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button> </div>
+						<div class="title_form">
+							Скачать <b>презентацию</b>
+						</div>
+						<form action="">
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваше имя">
+								<p class="help-block"></p>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваш Email">
+								<p class="help-block"></p>
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" name="" placeholder="Ваш телефон">
+								<p class="help-block"></p>
+							</div>
+							<button class="btn btn-orange w-100">Отправить</button>
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+
+
+
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/slick.min.js"></script>
 		<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-		<script type="text/javascript" src="js/embedplayer.js"></script>
-		<script type="text/javascript" src="js/html5.js"></script>
+		<script type="text/javascript" src="js/mediaelement-and-player.js"></script>
+		<script type="text/javascript" src="js/lang/ru.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
